# shadowfs

./: .gitignore  LICENSE  README.md  pyproject.toml
shadowfs/: __init__.py  cache.py  checkpoint.py  cli.py  file_node.py  github_fs.py  gui.py  models.py  repository.py  session.py
sociodigital/: config.yaml
tests/: __init__.py  test_cache.py  test_checkpoint.py  test_file_node.py  test_models.py  test_session.py
